@@ -28,9 +28,9 @@ downloadIdeSources=true
 #
 # ide version examples: IC-172.4343, IC-2018.1.3, IC-183-EAP-SNAPSHOT, IC-LATEST-EAP-SNAPSHOT
 # ide type examples: IC (IDEA Community), IU (IDEA Ultimate)
-#ideVersion=IC-2019.3
-#ideVersion=IC-193-EAP-SNAPSHOT
-#pythonPlugin=PythonCore:193.5233.84
+#ideVersion=IC-202-EAP-SNAPSHOT
+## OK with IC-202.6948.36 it is 2020.2.1 RC
+#pythonPlugin=PythonCore:202.6948.52
 # ---------
 # PyCharm
 # ---------
